overflow fix

--- a/src/global.css
+++ b/src/global.css
@@ -45,9 +45,3 @@ body {
   padding: 0;
   line-height: inherit;
 }
-
-body,
-html {
-  overflow: hidden;
-  position: fixed;
-}
